# mega-brain

./: .aiox-core.code-workspace  .gitignore  AGENTS.md  tmp_finalize.py  tmp_insights.py
.aiox-core/: .env.example  DOSSIER-AIOX-NEXUS.md  core-config.yaml  cUsersGabrielMEGABRAIN.claudesessionsLATEST-SESSION.md  install-manifest.yaml  pyproject.toml  version.json
.aiox-core/.claude/: settings.json
.aiox-core/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.aiox-core/.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.aiox-core/.planning/phases/02-review-engine/: 02-CONTEXT.md
.aiox-core/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.aiox-core/data/: entity-registry.yaml
.aiox-core/nexus/: __init__.py  config.py  models.py
.aiox-core/nexus/rubrics/: __init__.py  compliance_rubric.py  copy_rubric.py  performance_rubric.py  tech_rubric.py
.aiox-core/tests/: test_config.py  test_models.py  test_rubrics.py
.claude/: CLAUDE.md  settings.json
.codex/: hooks.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
DS-main/: clone-tier-s.sh
agents/: AGENT-INDEX.yaml
artifacts/: Protocolo-Homem-Insubstituivel.html  codigo-atracao-permanente.html  fenomeno-pam.html  generate_bench_pdf.py  generate_megabrain_pdf.py  vsl-script-p2.md  vsl-script-pam-v2.md  vsl-thumbnail-p2.html
docs/: EXECUCAO-DIA-1.md  SETUP-NEW-MACHINE.md  (+2 more)
(+867 files in other folders)
